force-app/main/default/objects/Salesforce_Ticket_Assignment__mdt/Salesforce_Ticket_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata Type is used to assign Salesforce Tickets on creation to the appropriate User or Queue through the Flow &quot;Salesforce Ticket - On Create - Assign Owner&quot;.</description>
    <label>Salesforce Ticket Assignment</label>
    <pluralLabel>Salesforce Ticket Assignments</pluralLabel>
</CustomObject>