force-app/main/default/objects/Salesforce_Ticket_Assignment__mdt/fields/Assign_User_or_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_User_or_Queue__c</fullName>
    <label>Assign User or Queue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>