force-app/main/default/objects/Salesforce_Ticket_Assignment__mdt/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <description>If the Assignee is a User, enter their Production Username. If the Assignee is a Queue, enter the Queue&apos;s Developer Name.</description>
    <inlineHelpText>If the Assignee is a User, enter their Production Username. If the Assignee is a Queue, enter the Queue&apos;s Developer Name.</inlineHelpText>
    <label>Assignee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>