force-app/main/default/objects/Salesforce_Ticket_Assignment__mdt/fields/Default_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Assignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one Salesforce Ticket Assignment record should be marked as Default and that Assignment will be used any time there is not a specific match.</description>
    <inlineHelpText>Only one Salesforce Ticket Assignment record should be marked as Default and that Assignment will be used any time there is not a specific match.</inlineHelpText>
    <label>Default Assignee</label>
    <type>Checkbox</type>
</CustomField>