force-app/main/default/objects/Salesforce_Ticket_Assignment__mdt/fields/Salesforce_Application__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Application__c</fullName>
    <description>Keep these values updated to match the Salesforce Application values on the Salesforce Ticket Object.</description>
    <inlineHelpText>Enter the Salesforce Application that applies to this Salesforce Ticket Assignment.</inlineHelpText>
    <label>Salesforce Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Seed</fullName>
            </value>
            <value>
                <fullName>ACT!</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Autofy</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Automation Studio</fullName>
            </value>
            <value>
                <fullName>Avalara Tax</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Calendar Anything</fullName>
            </value>
            <value>
                <fullName>Campaign Monitor</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
            <value>
                <fullName>CDP</fullName>
            </value>
            <value>
                <fullName>Chargent</fullName>
            </value>
            <value>
                <fullName>Cirrus Files for Google Drive</fullName>
            </value>
            <value>
                <fullName>CloudComp</fullName>
            </value>
            <value>
                <fullName>CloudPages</fullName>
            </value>
            <value>
                <fullName>Commercient</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Constant Contact</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Dataloader.io</fullName>
            </value>
            <value>
                <fullName>DBSync</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>